--- a/Dom.html
+++ b/Dom.html
@@ -1,13 +1,11 @@
 <!-- DOM Selectors
-1.innerHTML: returns all html nodes 
-2.textContent : returns all text content
-3.innerText : gives the text in the selected node
-4.querySelector
-5.querySelectorAll
-6.getAttribute
-7.setAttribute 
-diff b/w innerText & innerContent ????
-innerContent show the hidden and display none things
+getElementById, getElementByClassname, textContent : returns all text content,
+innerHTML: returns all html nodes, innerText : gives the text in the selected node,
+querySelector, querySelectorAll, getAttribute, setAttribute -->
+
+<!-- diff b/w innerText & innerContent ????
+innerContent show the hidden and display none things whereas
+innerText show the content that appears on screen
 getElementsByClassName gives HMTL collection-->
 
 <!DOCTYPE html>
