--- a/project/BMI_calculator/index.html
+++ b/project/BMI_calculator/index.html
@@ -7,13 +7,7 @@
     <title>BMI Calculator</title>
   </head>
   <body>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Github</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Linkedin</a>
-    </nav>
-    <h1>BMI Calculator</h1>
+    <h1>Body Mass Index Calculator</h1>
     <div id="card">
       <form>
         <p>
@@ -24,13 +18,15 @@
           <label>Weight in kg : </label>
           <input type="text" id="weight" />
         </p>
-        <button>calculate</button>
+        <div>
+          <button id="btn">Calculate</button>
+        </div>
         <br /><br /><br />
         <div id="result"></div>
       </form>
     </div>
+    <h1 id="guide">BMI Weight Guide</h3>
     <div id="weight-guide">
-      <h3>BMI Weight Guide</h3>
       <p>Under Weight = Less than 18.6</p>
       <p>Normal Range = 18.6 and 24.9</p>
       <p>Overweight = Greater than 24.9</p>
