--- a/project/BMI_calculator/index.html
+++ b/project/BMI_calculator/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>BMI Calculator</title>
+    <style>
+      #banner,#clock {
+        display: flex;
+        justify-content: center;
+        font-size: 30px;
+      }
+    </style>
   </head>
   <body>
+    <nav class="center">
+      <div id="banner">Your Local Time</div>
+      <div id="clock"></div>
+    </nav>
     <h1>Body Mass Index Calculator</h1>
     <div id="card">
       <form>
