Refactor number guessing game UI

--- a/project/no.guessing/index.html
+++ b/project/no.guessing/index.html
@@ -7,14 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="text">
-      <h1>Number Guessing Game</h1>
-      <h3>Try and Guess a Number Between 1 to 100.</h3>
-      <h3>You have 10 attempts to guess the right number.</h3>
+    <div>
+      <h1 id="mainHeading">Crack the Code</h1>
+      <h3 id="subHeading">Try and Guess a Number Between 1 to 100.</h3>
+      <h3 id="subHeading">Can You Guess the Secret Number in 10 Tries?</h3>
     </div>
-    <form>
-      <label></label>
-      <input type="text" name="number" id="number" />
+    <form class="form">
+      <input type="text" id="guessfield" />
+      <br><br><br>
+      <input type="button" id="submit" value="submit guess" />
     </form>
   </body>
 </html>
