Refactor number guessing game UI styling

--- a/events/events.html
+++ b/events/events.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        ul{
+            display: flex;
+            justify-content: space-around;
+        }
+    </style>
 </head>
 <body style="background-color: #414141; color: aliceblue;">
     <h1>Amazing Images</h1>
-    <div >
+    <div class="imgs">
         <ul id="images">
             <li><img width="200px" id="photoshop" src="https://images.pexels.com/photos/3561339/pexels-photo-3561339.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt="photoshop"></li>
             <li><img width="200px" id="japan" src="https://images.pexels.com/photos/3532553/pexels-photo-3532553.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt=""></li>
