Set Timeout and Set Ineterval

--- a/events/events2.html
+++ b/events/events2.html
@@ -13,7 +13,7 @@
 <script>
     document.querySelector('.btn').addEventListener('click',function(e){
         setTimeout(function(){
-            console.log("Jai shree ram");
+            console.log("Welcome");
         },2000)
     },false ) 
 </script>
