--- a/project/no.guessing/index.html
+++ b/project/no.guessing/index.html
@@ -16,7 +16,7 @@
     <form class="form">
       <input type="text" id="guessfield" />
       <br><br><br>
-      <input type="submit" id="submit" value="submit guess" />
+      <input type="submit" id="submit" value="Crack!" />
     </form>
     <div class="results">
       <p>Previous Guesses : <span class="guessed"></span></p>
