navbar and add responsive design

--- a/project/BMI_calculator/index.html
+++ b/project/BMI_calculator/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>BMI Calculator</title>
-    <style>
-      #banner,#clock {
-        display: flex;
-        justify-content: center;
-        font-size: 30px;
-      }
-    </style>
   </head>
   <body>
-    <nav class="center">
-      <div id="banner">Your Local Time</div>
-      <div id="clock"></div>
+    <nav class=" navbar ">
+      <div class="logo">
+        <!-- <img src="logo.png" alt="Logo"> -->
+      </div>
+      <ul class="nav-list">
+        <li><a href="#about">About</a></li>
+        <li><a href="#risk-calculate">Calculate</a></li>
+        <li><a href="#chart">Chart</a></li>
+        <li><a href="#risk">Risk</a></li>
+        <li id="clock"></li>
+      </ul>
     </nav>
+    <!-- <div id="banner">Your Local Time</div> -->
+    <!-- <div id="clock"></div> -->
     <h1>Body Mass Index Calculator</h1>
     <div id="card">
       <form>
