NodeList, HTML collection

--- a/Dom.html
+++ b/Dom.html
@@ -1,5 +1,7 @@
 <!-- DOM Selectors
-getElementById, getElementByClassname, textContent : returns all text content,
+querySelecto, querySelectorAll (return NodeList uses foreach(function(){})),
+getElementById, getElementByClassName (return HMTLCollection need to convert to array syntax = Array.From()),
+textContent : returns all text content,
 innerHTML: returns all html nodes, innerText : gives the text in the selected node,
 querySelector, querySelectorAll, getAttribute, setAttribute -->
 
